--- a/Resources/views/WMS/details.html.twig
+++ b/Resources/views/WMS/details.html.twig
@@ -1,11 +1,10 @@
-<?xml version="1.0" ?>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Details for {{ wmsTitle }}</title>
-    </head>
-    <body class="wms">
-        <h1>{{ wmsTitle }}</h1>
-        <p>The WMS Details go here</p>
-    </body>
-</html>
+{% extends '::base.html.twig' %} 
+
+{% block title %}Details for {{ wmsTitle }} {% endblock %}
+
+{% block body %}
+    <h1>{{ wmsTitle }}</h1>
+    <p>The WMS Details go here</p>
+    <a href="{{ url('wms_showdelete',wmsId) }}">Löschen</a>
+    <p>lala</p>
+{% endblock %}
