--- a/Resources/views/WMS/index.html.twig
+++ b/Resources/views/WMS/index.html.twig
@@ -1,13 +1,7 @@
-<?xml version="1.0" ?>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <p>Das hier ist die gesamte brouhaha</p>
-        <ul class="actions">
-            <li><a href="{{ path('wms_showadd')  }}">WMS hinzufügen</a></li>
-        </ul>
-    </body>
-</html>
+{% extends '::base.html.twig' %} 
+
+{% block body %}
+    <ul class="actions">
+        <li><a href="{{ path('wms_showadd')  }}">WMS hinzufügen</a></li>
+    </ul>
+{% endblock %}
