added simple WMS parser

--- a/Resources/views/WMS/details.html.twig
+++ b/Resources/views/WMS/details.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>{{ wmsTitle }}</h1>
     <p>The WMS Details go here</p>
-    <a href="{{ url('wms_showdelete',wmsId) }}">Löschen</a>
     <p>lala</p>
+    <a href="">ll</a>
+    <a href="{{ path('wms_showdelete',wmsId) }}">Lschen</a>
 {% endblock %}
