--- a/Resources/views/WMS/showadd.html.twig
+++ b/Resources/views/WMS/showadd.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
     <form name="url" action="{{ path('wms_preview') }}" method="POST">
-        <input type="url" name="getcapa_url" id="getcapa_url" />
+        <input type="url" name="getcapa_url" id="getcapa_url" value="http://osm.wheregroup.com/cgi-bin/osm_basic.xml?SERVICE=WMS&amp;REQUEST=GetCapabilities" />
         <label for="getcapa_url">getCapabilities Url</label>
         <input type="submit" name="save" value="Laden" />
     </form>
