--- a/src/Mapbender/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/layout.html.twig
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>{% block title %}Mapbender 3{% endblock %}</title>
-	</head>
-	<body>
-		{% block content %}{% endblock %}
-	</body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<!--[if IE]>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<![endif]-->
+	<title>{% block title %}Mapbender 3{% endblock %}</title>
+	{% block meta %}{% endblock %}
+	<link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/reset.css') }}" />
+	<link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/jQuery/smoothness/jquery-ui-1.8.12.custom.css') }}" />
+	{% block css %}{% endblock %}
+</head>
+<!--[if lt IE 7 ]><body class="ie6"><![endif]-->
+<!--[if IE 7 ]><body class="ie7"><![endif]-->
+<!--[if IE 8 ]><body class="ie8"><![endif]-->
+<!--[if IE 9 ]><body class="ie9"><![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
+	{% block content %}{% endblock %}
+	<script type="text/javascript" src="{{ asset('bundles/mapbendercore/jQuery/jquery-1.5.1.min.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('bundles/mapbendercore/jQuery/jquery-ui-1.8.12.custom.min.js') }}"></script>
+	{% block js %}{% endblock %}
+</body>
 </html>
+
