bringing up to date

--- a/Resources/views/WMS/delete.html.twig
+++ b/Resources/views/WMS/delete.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %} 
+{% extends 'MBWMSBundle:WMS:base.html.twig' %} 
 
 {% block title %}Deleted {{ wmsTitle }} {% endblock %}
 
