--- a/Resources/views/WMS/showdelete.html.twig
+++ b/Resources/views/WMS/showdelete.html.twig
@@ -1,11 +1,11 @@
-{% extends '::base.html.twig' %} 
+{% extends 'MBWMSBundle:WMS:base.html.twig' %} 
 
 {% block title %}Delete {{ wmsTitle }} {% endblock %}
 
 {% block body %}
     <h1>{{ wmsTitle }}</h1>
     <p class="message">Wirklich Löschen ?</p>
-    <form action="{{ path("wms_delete",wmsId) }}" method="POST">
-        <input type="submit" value="Löschen" />
+    <form action="{{ path("mb_wms_delete",{'id': wmsId}) }}" method="POST">
+        <input type="submit" value="Löschen" /><a href="{{ path("mb_wms_details",{'id': wmsId}) }}"> Abbrechen </a>
     </form>
 {% endblock %}
