added i18n and l10n for de

--- a/Resources/views/WMS/details.html.twig
+++ b/Resources/views/WMS/details.html.twig
@@ -3,8 +3,5 @@
 
 {% block body %}
     <h1>{{ wmsTitle }}</h1>
-    <p>The WMS Details go here</p>
-    <p>lala</p>
-    <a href="">ll</a>
-    <a href="{{ path('mb_wms_showdelete',{'id':wmsId}) }}">Löschen</a>
+    <a href="{{ path('mb_wms_showdelete',{'id':wmsId}) }}">{% trans %}Delete{% endtrans %}</a>
 {% endblock %}
