--- a/Resources/views/WMS/base.html.twig
+++ b/Resources/views/WMS/base.html.twig
@@ -3,7 +3,7 @@
 {% block navigation %}
 {{ parent() }}
 <ul class="navigation">
-    <li><a href="{{ path('mb_wms_showadd')  }}">WMS hinzufügen</a></li>
-    <li><a href="{{ path('mb_wms_index')  }}">WMS finden</a></li>
+    <li><a href="{{ path('mb_wms_showadd')  }}">{% trans %}Add WMS{% endtrans %}</a></li>
+    <li><a href="{{ path('mb_wms_index')  }}">{% trans %}Find WMS{% endtrans %}</a></li>
 </ul>
 {% endblock %}
