--- a/Resources/views/WMS/delete.html.twig
+++ b/Resources/views/WMS/delete.html.twig
@@ -1,8 +1,8 @@
 {% extends 'MBWMSBundle:WMS:base.html.twig' %} 
 
-{% block title %}Deleted {{ wmsTitle }} {% endblock %}
+{% block title %}{{ wmsTitle }} {% endblock %}
 
 {% block body %}
     <h1>{{ wmsTitle }}</h1>
-    <p class="message">WMS has beed deleted</p>
+    <p class="message">{% trans %}WMS deleted{% endtrans %}</p>
 {% endblock %}
