--- a/Resources/views/WMS/delete.html.twig
+++ b/Resources/views/WMS/delete.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ wmsTitle }} {% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>{{ wmsTitle }}</h1>
     <p class="message">{% trans %}WMS deleted{% endtrans %}</p>
 {% endblock %}
