--- a/Resources/views/WMS/showadd.html.twig
+++ b/Resources/views/WMS/showadd.html.twig
@@ -5,15 +5,17 @@
 <link rel="stylesheet" href="{{ asset('bundles/mbwms/css/style.css') }}" type="text/css"/>
 {% endblock %}
 
-{% block body %}
-    <form name="url" action="{{ path('mb_wms_preview') }}" method="POST">
-        <input type="url" name="getcapa_url" id="getcapa_url" value="http://osm.wheregroup.com/cgi-bin/osm_basic.xml?SERVICE=WMS&amp;REQUEST=GetCapabilities" />
-        <label for="getcapa_url">{% trans %}Capabilities URL{% endtrans %}</label> 
-        <input type="submit" name="save" value="{% trans %}Load{% endtrans %}" /> 
-    </form>
-    <form name="upload" action="{{ path('mb_wms_preview')  }}" method="POST">
-        <input type="file" name="getcapa_file" id="getcapa_file />
-        <label for="getcapa_file">{% trans %}Capabilities File{% endtrans %}</label>
-        <input type="submit" name="save" value="{% trans %}Load{% endtrans %}" />
-    </form>
+{% block content %}
+    <div class="message">
+        <form name="url" action="{{ path('mb_wms_preview') }}" method="POST">
+            <input type="url" name="getcapa_url" id="getcapa_url" value="http://osm.wheregroup.com/cgi-bin/osm_basic.xml?SERVICE=WMS&amp;REQUEST=GetCapabilities" />
+            <label for="getcapa_url">{% trans %}Capabilities URL{% endtrans %}</label> 
+            <input type="submit" name="save" value="{% trans %}Load{% endtrans %}" /> 
+        </form>
+        <form name="upload" action="{{ path('mb_wms_preview')  }}" method="POST">
+            <input type="file" name="getcapa_file" id="getcapa_file />
+            <label for="getcapa_file">{% trans %}Capabilities File{% endtrans %}</label>
+            <input type="submit" name="save" value="{% trans %}Load{% endtrans %}" />
+        </form>
+    </div>
 {% endblock %}
