--- a/src/Mapbender/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -4,6 +4,11 @@
 
 {% block content %}
 <p>This is the Mapbender 3 welcome page.</p>
-<p>Later on this will show a list of all available applications for you to choose from.</p>
+<p>Below you find a list of configured applications:</p>
+<ul id="apps">
+{% for key, app in apps %}
+    <li class="application-{{ key }} application-type-{{ app.type }}"><a href="{{ path('mapbender_application', { 'slug': key }) }}">{{ app.title }}</a></li>
+{% endfor %}
+</ul>
 {% endblock %}
 
