--- a/src/Mapbender/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/layout.html.twig
@@ -7,8 +7,9 @@
 	<![endif]-->
 	<title>{% block title %}Mapbender 3{% endblock %}</title>
 	{% block meta %}{% endblock %}
-	<link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/reset.css') }}" />
-	<link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/jQuery/smoothness/jquery-ui-1.8.12.custom.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/reset.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/themes/base/jquery-ui.css') }}" />
+    <!--link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/jQuery/jquery-1.5.1.min.js')}}" /-->
 	{% block css %}{% endblock %}
 </head>
 <!--[if lt IE 7 ]><body class="ie6"><![endif]-->
@@ -16,9 +17,9 @@
 <!--[if IE 8 ]><body class="ie8"><![endif]-->
 <!--[if IE 9 ]><body class="ie9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
-	{% block content %}{% endblock %}
-	<script type="text/javascript" src="{{ asset('bundles/mapbendercore/jQuery/jquery-1.5.1.min.js') }}"></script>
-	<script type="text/javascript" src="{{ asset('bundles/mapbendercore/jQuery/jquery-ui-1.8.12.custom.min.js') }}"></script>
+    {% block content %}{% endblock %}
+    <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/jquery-1.4.4.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/mapbendercore/mapquery/lib/jquery/ui/jquery-ui.js') }}"></script>
 	{% block js %}{% endblock %}
 </body>
 </html>
