--- a/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
@@ -1,1 +1,8 @@
-<a class="mb-element mb-element-button" id="{{ id }}">{{ configuration.text }}</a>
+{% if configuration.group is defined %}
+<div class="mb-element mb-element-button" id="{{ id }}">
+    <input type="radio" name="{{ configuration.group }}" id="{{ id }}" name="{{ id }}"/>
+    <label for="{{ id }}">{{ configuration.text }}</label>
+</div>
+{% else %}
+<button class="mb-element mb-element-button" id="{{ id }}">{{ configuration.text }}</button>
+{% endif %}
