Cleanup - removed old OpenLayersMap widgets

--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
@@ -21,3 +21,8 @@ div.mb-element-button {
 .mb-element-button .ui-button-icon-primary.featureinfo {
     background-image: url('icons/MActionIdentify.png');
 }
+
+.mb-element-map {
+	height: 100%;
+}
+
