--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmcstorage.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmcstorage.html.twig
@@ -1,27 +1,27 @@
-<div class="mb-element mb-element-wmc-storage" id="{{ id }}" title="WMC Storage">
+<div class="mb-element mb-element-wmc-storage" id="{{ id }}" title="{% trans %}WMC Storage{% endtrans %}">
     <div id="wmc-save">
-        <label for="wmc-doc-title-save">Title</label>
+        <label for="wmc-doc-title-save">{% trans %}Title{% endtrans %}</label>
         <input id="wmc-doc-title-save" />
-        <button>Save</button>
+        <button>{% trans %}Save{% endtrans %}</button>
     </div>
     <div id="wmc-load">
-        <label for="wmc-doc-title-load">Title</label>
+        <label for="wmc-doc-title-load">{% trans %}Title{% endtrans %}</label>
         <select id="wmc-doc-title-load"></select>
-        <button>Load</button>
+        <button>{% trans %}Load{% endtrans %}</button>
     </div>
     <div id="wmc-save-spinner">
-        <p>Please wait, saving WMC...</p>
+        <p>{% trans %}Please wait, saving WMC...{% endtrans %}</p>
     </div>
     <div id="wmc-save-error">
-        <p>There was a error saving your WMC.</p>
+        <p>{% trans %}There was a error saving your WMC.{% endtrans %}</p>
     </div>
     <div id="wmc-list-spinner">
-        <p>Please wait, loading WMC list...</p>
+        <p>{% trans %}Please wait, loading WMC list...{% endtrans %}</p>
     </div>
     <div id="wmc-list-error">
-        <p>There was a error retrieving the WMC list.</p>
+        <p>{% trans %}There was a error retrieving the WMC list.{% endtrans %}</p>
     </div>
     <div id="wmc-load-spinner">
-        <p>Please wait, loading WMC...</p>
+        <p>{% trans %}Please wait, loading WMC...{% endtrans %}</p>
     </div>
 </div>
