--- a/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/button.html.twig
@@ -1,5 +1,5 @@
 {% if configuration.group is defined %}
-<div class="mb-element mb-element-button" id="{{ id }}">
+<div class="mb-element mb-element-button{% if configuration.icon is defined %} mb-element-button-icon{% endif %}" id="{{ id }}">
     <input type="radio" name="{{ configuration.group }}" id="{{ id }}" name="{{ id }}"/>
     <label for="{{ id }}">{{ configuration.text }}</label>
 </div>
