--- a/Resources/views/WMS/index.html.twig
+++ b/Resources/views/WMS/index.html.twig
@@ -2,10 +2,35 @@
 
 {% block heading %}WMS{% endblock %}
 {% block content %}
-<ul class="wms">
-    {% for wms in wmsArr %}
-        <li><a href=" {{ path("mb_wms_details",{'id': wms.getId()}) }}">{{ wms.getTitle() }}</a></li>
-    {% endfor %}
-</ul>
+
+<table class="wmslist">
+<caption>Verfügbare WMS-Dienste</caption>
+<tr>
+
+<th>
+Nr.
+</th>
+
+<th>
+WMS-Name
+</th>
+</tr>
+{% for wms in wmsArr %}
+
+<tr>
+
+<td>
+{{ loop.index }}
+</td>
+
+<td>
+       <a href=" {{ path("mb_wms_details",{'id': wms.getId()}) }}">{{ wms.getTitle() }}</a></li>
+</td>
+</tr>
+
+{% endfor %}
+</ol>
+</table>
+
 <a href="{{ path("mb_wms_index",{"first":prevFirst}) }}">{% trans %}Previous{% endtrans %}</a> <a href="{{  path("mb_wms_index",{"first": nextFirst}) }}">{% trans %}Next{% endtrans %}</a>
 {% endblock %}
