Frontendstyle, Title, Heading

--- a/Resources/views/WMS/index.html.twig
+++ b/Resources/views/WMS/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'MBWMSBundle:WMS:base.html.twig' %} 
 
-{% block heading %}WMS{% endblock %}
+{% block heading %}WMS all{% endblock %}
 {% block content %}
 
 <table class="wmslist">
