--- a/Resources/views/WMS/showadd.html.twig
+++ b/Resources/views/WMS/showadd.html.twig
@@ -1,6 +1,8 @@
 {% extends 'MBWMSBundle:WMS:base.html.twig' %} 
 
 {% block title %}{% trans %}Add WMS{% endtrans %}{% endblock %}
+{% block heading %}WMS add{% endblock %}
+
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('bundles/mbwms/css/style.css') }}" type="text/css"/>
 {% endblock %}
