--- a/Resources/views/WMS/details.html.twig
+++ b/Resources/views/WMS/details.html.twig
@@ -2,6 +2,7 @@
 
 {% block title %}Details for {{ wms.getTitle() }} {% endblock %}
 
+
 {% block content %}
 
 <fieldset>
@@ -106,6 +107,22 @@
 {% endblock %}
 
 {% block javascripts %}
+<script type="application/javascript">
+var previewWMS = {
+    title: '{{ wms.getTitle() }}',
+    url: '{{ wms.getGetMapGet() }}',
+    rootlayer: '{{ wms.getRootLayer().getName() }}',
+    format: '{{ wms.getDefaultGetMapFormat() }}',
+    bounds: {
+                left: '{{ minx }}',
+                bottom: '{{ miny }}',
+                right:'{{ maxx }}',
+                top: '{{ maxy }}'
+            }
+    projection: '{{ wms.getRootLayer().getDefaultSRS() }}'
+}
+
+</script>
 <script src="{{asset('js/ol/OpenLayers-2.10/OpenLayers.js') }}"></script>
 <script src="{{asset('js/ol/ol_client.js') }}"></script>		
 	
